Fix visibility of unread channel name (#3143) [ci skip]

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -830,6 +830,7 @@
 
 .chatchanneltab--new {
   background: lighten($yellow, 10%);
+  color: $black;
 }
 
 .chatchanneltab--video {
